# AuthCore

./: .gitignore  ANALYSE.md  CONTRIBUTORS.md  Cargo.toml  README.md  docker-compose.test.yml
.github/workflows/: rust.yml
certutil/: Cargo.toml  README.md
certutil/src/: main.rs
htycommons/: Cargo.toml
htycommons/src/: cert.rs  common.rs  db.rs  hty_resource_orphan.rs  jwt.rs  lib.rs  logger.rs  models.rs  pagination.rs  redis_util.rs  secret_box.rs  test_scaffold.rs  upyun.rs  web.rs  wx.rs
htycommons/tests/: basic_tests.rs
htyuc/: Cargo.toml  README.md  logrotate.config
htyuc/config/: log4rs.yaml
htyuc/container/: init.sh  setup.sh
htyuc/src/: ddl.rs  lib.rs  (+7 more)
htyuc_models/: .env  Cargo.toml
htyuc_models/migrations/2021-09-01-042953_init/: up.sql
htyuc_models/migrations/2021-09-22-144324_task_id/: up.sql
htyuc_models/migrations/2021-10-04-132845_modify_role_to_varchar/: up.sql
htyuc_models/migrations/2021-10-05-021632_add_password/: up.sql
htyuc_models/migrations/2021-10-11-203652_add_hty_actions_tbl/: up.sql
htyuc_models/migrations/2021-10-11-204003_add_hty_action_types_tbl/: up.sql
htyuc_models/migrations/2021-10-12-080641_add_user_info_roles_tbl/: up.sql
htyuc_models/migrations/2021-10-12-080858_remove_user_role_from_user_app_info/: up.sql
htyuc_models/migrations/2021-10-12-121518_add_app_id_to_user_info_roles/: up.sql
htyuc_models/migrations/2021-10-12-132759_drop_unique_limits/: up.sql
htyuc_models/migrations/2021-10-14-150208_rename_hty_actions_tbl_to_hty_label/: up.sql
htyuc_models/migrations/2021-10-15-121255_remove_duplicate_app_id_from_user_info_roles/: up.sql
htyuc_models/migrations/2021-10-24-080206_rename_to_app_status/: up.sql
htyuc_models/migrations/2021-11-07-080026_add_status_for_role_action_label/: up.sql
htyuc_models/migrations/2021-11-09-154548_pubkey/: up.sql
htyuc_models/migrations/2021-11-14-111726_add_hty_tags/: up.sql
htyuc_models/migrations/2021-11-14-135216_remove_tag_type/: up.sql
htyuc_models/migrations/2021-12-16-145029_add_privkey_to_hty_apps/: up.sql
htyuc_models/migrations/2021-12-29-123553_add_wx_id_to_app/: up.sql
htyuc_models/migrations/2022-01-12-103834_change_res_type_type_to_varchar/: up.sql
htyuc_models/migrations/2022-02-19-101215_add_meta_for_user_app_info/: up.sql
htyuc_models/migrations/2022-02-24-155304_add_from_to_app_tbl/: up.sql
htyuc_models/migrations/2022-03-07-071318_add_created_at_to_user_app_info/: up.sql
htyuc_models/migrations/2022-03-30-154009_add_some_columns_for_htyuser_userappinfo/: up.sql
htyuc_models/migrations/2022-05-14-172952_add_reject_reason_for_user_app_info/: up.sql
htyuc_models/migrations/2022-06-15-122115_add_tongzhi_tbl/: up.sql
htyuc_models/migrations/2022-06-15-123953_add_app_ref_to_hty_tongzhi/: up.sql
htyuc_models/migrations/2022-06-28-173608_set_send_from_as_nullable_for_hty_tongzhi/: up.sql
htyuc_models/migrations/2022-07-04-171140_add_user_group_tbl/: up.sql
htyuc_models/migrations/2022-07-04-171438_add_app_id_to_user_group/: up.sql
htyuc_models/migrations/2022-07-05-051042_add_name_to_user_group/: up.sql
htyuc_models/migrations/2022-07-05-054313_change_group_created_at_type/: up.sql
htyuc_models/migrations/2022-07-16-153556_add_needs_refresh/: up.sql
htyuc_models/migrations/2022-07-28-062222_add_hty_gonggao/: up.sql
htyuc_models/migrations/2022-08-06-164120_create_hty_template_tbl/: up.sql
htyuc_models/migrations/2022-08-07-145850_rename_hty_role_name/: up.sql
htyuc_models/migrations/2022-08-07-151404_rename_template_desc/: up.sql
htyuc_models/migrations/2022-08-12-060722_add_is_wx_app_to_hty_apps/: up.sql
htyuc_models/migrations/2022-08-18-170203_add_tasks_to_hty_resource/: up.sql
htyuc_models/migrations/2022-08-22-082000_remove_task_id_from_hty_resource/: up.sql
htyuc_models/migrations/2022-10-09-161510_add_push_info_to_hty_tongzhi/: up.sql
htyuc_models/migrations/2022-11-30-152641_add_avatar_url_to_user_app_info/: up.sql
htyuc_models/migrations/2023-05-21-171302_add_compress_processed/: up.sql
htyuc_models/migrations/2023-06-16-193920_add_created_by_and_updated_by_to_hty_resource/: up.sql
htyuc_models/migrations/2023-08-27-155043_add_hty_user_rels/: up.sql
htyuc_models/migrations/2023-09-09-161148_add_role_name_to_hty_roles/: up.sql
htyuc_models/migrations/2023-10-28-155237_add_teachers_to_hty_user_group/: up.sql
htyuc_models/migrations/2026-03-14-160120_add_foreign_keys_to_user_rels/: down.sql  up.sql
htyuc_models/migrations/2026-04-26-223500_update_template_placeholders_to_course/: down.sql  up.sql
htyuc_models/migrations/2026-04-27-191800_create_organizations_and_org_members/: down.sql  up.sql
htyuc_models/migrations/2026-04-27-211800_add_is_system_and_org_roles/: down.sql  up.sql
htyuc_models/migrations/2026-04-27-224500_add_org_id_to_hty_user_rels/: down.sql  up.sql
htyuc_models/migrations/2026-04-28-120000_comment_hty_resources_res_type_for_audit/: down.sql  up.sql
htyuc_models/migrations/2026-04-30-152000_create_wx_followers_tables/: down.sql  up.sql
htyuc_models/migrations/2026-05-02-082153_create_departments_and_department_members/: down.sql  up.sql
htyuc_models/migrations/2026-05-15-084909_create_invitation_codes/: down.sql  up.sql
htyuc_models/migrations/2026-05-17-143211_rename_teacher_student_info_to_generic/: down.sql  up.sql
htyuc_models/migrations/2026-06-04-120000_hty_resources_is_orphan/: down.sql  up.sql
htyuc_models/migrations/2026-06-07-120000_user_group_managed_kind/: down.sql  up.sql
htyuc_models/src/: lib.rs  models.rs  schema.rs  wx.rs
htyuc_remote/: Cargo.toml
htyuc_remote/src/: lib.rs  remote_calls.rs
scripts/: migrate_redis_wx_to_pg.py  run_tests.sh
upyun_tool/: .alchemy_upt_config  .alchemy_upyun_pass  .huiwings_upt_config  .local_dev_upt_config  .moicen_upt_config  .moicen_upyun_pass  Cargo.toml  README.md  build_install_run_upload_upyun.sh  install_release_to_usr_local.sh  upload_assets.sh
upyun_tool/src/: command_parser.rs  main.rs  upyun.rs  upyun_common.rs
user_center/: Cargo.toml
user_center/certutil/: Cargo.toml
(+52 files in other folders)
