[workspace]
members = ["htycommons", "htyuc", "htyuc_models", "htyuc_remote", "certutil", "upyun_tool"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["阿男 <l.weinan@gmail.com>", "buddy", "moicen", "xiaolitongxue666"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal packages
htycommons = { path = "htycommons" }
htyuc_models = { path = "htyuc_models" }
htyuc_remote = { path = "htyuc_remote" }

# External dependencies
aes = "^0.8"
anyhow = "^1.0"
axum = { version = "^0.8"}
axum-macros = "^0.5"
base64 = "^0.22"
block-modes = "^0.9"
cbc = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "^4.5", features = ["derive", "cargo"] }
data-encoding = "^2.9"
diesel = { version = "^2.3", features = ["postgres", "r2d2", "serde_json", "chrono"] }
diesel-derives = { version = "^2.0" }
dotenv = "^0.15"
hex = "^0.4"
hex-literal = "^1.0"
jsonwebtoken = "^9.3"
log = "^0.4"
log4rs = "^1.4"
quote = "=1.0.23" # required by diesel currently
rand = "^0.9"
redis = "^0.24"
reqwest = { version = "^0.12", features = ["blocking", "json"] }
ring = "^0.17"
rust-crypto = "*"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
thiserror = "^2.0"
time = { version = "^0.3", features = ["macros"] }
tokio = { version = "^1.48", features = ["full"] }
tower-http = { version = "^0.5", features = ["trace"] }
tracing = { version = "^0.1" }
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "local-time"] }
url = "^2.5"
uuid = { version = "^1.18", features = ["serde", "v4"] }
string-builder = "*"

#[patch.crates-io]
#quote = { git = 'https://github.com/dtolnay/quote', rev="550af67" }
