[package]
name = "htycommons"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Common utilities and shared libraries for HTY projects"
license = { workspace = true }
repository = "https://github.com/your-org/AuthCore"
keywords = ["auth", "jwt", "utilities", "common"]
categories = ["authentication", "web-programming::http-server"]

[dependencies]
aes = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
block-modes = { workspace = true }
cbc = { workspace = true }
chrono = { workspace = true }
data-encoding = { workspace = true }
diesel = { workspace = true }
dotenv = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rust-crypto = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }


