[package]
name = "htyuc_models"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "User management models for HTY projects"
license = { workspace = true }
repository = "https://github.com/alchemy-studio/AuthCore"
keywords = ["models", "user", "management", "diesel"]
categories = ["database", "web-programming::http-server"]

[dependencies]
htycommons = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
