[package]
name = "htyuc_remote"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Remote service client for HTY projects"
license = { workspace = true }
repository = "https://github.com/alchemy-studio/AuthCore"
keywords = ["remote", "client", "http", "api"]
categories = ["web-programming::http-client"]

[dependencies]
htycommons = { workspace = true }
htyuc_models = { workspace = true }
aes = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
block-modes = { workspace = true }
chrono = { workspace = true }
data-encoding = { workspace = true }
diesel = { workspace = true }
dotenv = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rust-crypto = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
