[package]
name = "upyun_tool"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
data-encoding = { workspace = true }
# workspace 使用 reqwest 0.13：默认 default-tls 为 rustls，不依赖系统 libssl.so.1.1
reqwest = { workspace = true }
ring = { workspace = true }
rust-crypto = { workspace = true }
url = { workspace = true }
