[package]
name = "certutil"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
#version = "0.1.0"
#authors = ["阿男 <l.weinan@gmail.com>"]
#edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
block-modes = { workspace = true }
chrono = { workspace = true }
data-encoding = { workspace = true }
diesel = { workspace = true }
dotenv = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
htycommons = { path = "../htycommons" }
jsonwebtoken = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
#rocket_contrib = { workspace = true }
rust-crypto = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

#
#aes = "0.7.0"
#anyhow = "1.0"
#base64 = "0.13.0"
#block-modes = "0.8.0"
#chrono = { version = "0.4", features = ["serde"] }
#data-encoding = "2.3.1"
#dotenv = "0.15.0"
#hex-literal = "0.3.1"
#htycommons = { path = "../htycommons" }
#jsonwebtoken = "7"
#log = "0.4.14"
#log4rs = '1.0.0'
#rand = "0.8.3"
#reqwest = { version = "0.11.1", features = ["blocking", "json"] }
#ring = "0.16.19"
## rocket_contrib = { version = "0.4.10", features = ["diesel_postgres_pool"] }
#rust-crypto = "0.2.36"
#serde = { version = "1.0.2", features = ["derive"] }
#serde_derive = "1.0.2"
#serde_json = "1.0.2"
#thiserror = "1.0.29"
#uuid = { version = "0.8", features = ["serde", "v4"] }
#hex = "0.4.3"
